src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field Officer that completed the job activity.</description>
        <label>Staff</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Activities</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact for whom the job activity was completed (would be Interviewee for a survey).</description>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs of Client</relationshipLabel>
        <relationshipName>JobAsInterviewee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <description>Date and time when the Job activity was created.</description>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreationNotes__c</fullName>
        <description>Workflows, scheduled job activities or creator user might want to add some notes here.</description>
        <label>Creation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreationSource__c</fullName>
        <description>The way the job activity was created.</description>
        <label>Creation Source</label>
        <picklist>
            <picklistValues>
                <fullName>Ad-hoc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date and time when the job activity was completed.</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobTemplate__c</fullName>
        <description>Job for this Job Activity</description>
        <label>Job</label>
        <referenceTo>JobTemplate__c</referenceTo>
        <relationshipLabel>Job Activities</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date and time when the job activity was started.</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartLocation__c</fullName>
        <label>Start Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>EndLocation__c</fullName>
        <label>End Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <label>Job Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>EndDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>JobTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>EndDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>JobTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EndDate__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Completed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>